<resources>
    <string name="app_name">Flavr</string>

    <string name="general_ws_error">Error en el servicio</string>
    <string name="default_loading_text">Cargando&#8230;</string>

    <!--Login-->
    <string name="login_email_hint">Usuario o correo</string>
    <string name="login_password_hint">Contraseña</string>
    <string name="login_button_login_text">Ingresar</string>
    <string name="password_recovery_text">¿Olvidaste tu contraseña?</string>
    <string name="sign_up_question_text">¿No tienes cuenta?</string>
    <string name="sign_up_text">Regístrate</string>

</resources>
